--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 
+<head>
+  <title>STP</title>
+  <meta name="description" content="website description" />
+  <meta name="keywords" content="website keywords, website keywords" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
+</head>
+<p>UI version: 2019.20.01.1</p>
+
 
 </html>
