--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
 </head>
-<p>UI version: 2019.20.01.1</p>
 
+
+<body>
+<p>UI version: 2019.20.1.2</p>
+
+  <div id="main">
+    <div id="header">
+      <div id="logo">
+        <div id="logo_text">
+          <!-- class="logo_colour", allows you to change the colour of the text -->
+          <h1><a href="index.html">STP<span class="logo_colour"></span></a></h1>
+          <h2>Societatea de Transport Public Alba Iulia</h2>
+        </div>
+      </div>
+      <div id="menubar">
+        <ul id="menu">
+          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
+          <li class="selected"><a href="index.html">Pagina Principala</a></li>        
+          <li><a href="informatii.html">Informatii</a></li>
+          <li><a href="contact.html">Contact </a></li>
+		  <li><a href="transport.html">Harta Stp</a></li>
+        </ul>
+      </div>
+    </div>
 
 </html>
