--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-<p>UI version: 2019.20.1.2</p>
+<p>UI version: 2019.20.1.3</p>
 
   <div id="main">
     <div id="header">
@@ -32,5 +32,16 @@
         </ul>
       </div>
     </div>
-
+<div id="site_content">
+      <div class="sidebar">
+        <!-- insert your sidebar items here -->
+        <h3>Noutati:</h3>
+        <h4>Am dat drumu la pagina</h4>
+        <h5>20 Ianuarie 2019</h5>
+        <p></p>
+        <h4>Contact FaceBook</h4>  
+          <a href="https://www.facebook.com/steau.mihai20?ref=bookmarks" target="_blank">Steau Mihai</a>
+       <h4>Contact Instagram</h4>  
+         <a href="instagram://user?username={steaumihai20}">Link to Instagram Profile</a>
+	   
 </html>
