--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div id="header">
       <div id="logo">
         <div id="logo_text">
-          <!-- class="logo_colour", allows you to change the colour of the text -->
+          <!-- clasa logo_colour o folosim pentru a schimba culoarea textului -->
           <h1><a href="index.html">STP<span class="logo_colour"></span></a></h1>
           <h2>Societatea de Transport Public Alba Iulia</h2>
         </div>
       </div>
       <div id="menubar">
         <ul id="menu">
-          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
+          <!-- clasa select o folosim pentru pagina curenta -->
           <li class="selected"><a href="index.html">Pagina Principala</a></li>        
           <li><a href="informatii.html">Informatii</a></li>
           <li><a href="contact.html">Contact </a></li>
@@ -34,7 +34,7 @@
     </div>
 <div id="site_content">
       <div class="sidebar">
-        <!-- insert your sidebar items here -->
+        <!-- partea dreapta -->
         <h3>Noutati:</h3>
         <h4>Am dat drumu la pagina</h4>
         <h5>20 Ianuarie 2019</h5>
