--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-<p>UI version: 2019.20.1.6</p>
+<p>UI version: 2019.20.1.7</p>
   <div id="main">
     <div id="header">
       <div id="logo">
@@ -78,6 +78,14 @@
 	   <p>Sambata/Duminica: 6:10- 21:55</p><br>
 	   <span class="center-left"><a href="http://stpalba.ro/program_etajata.php" target="_blank"><img src="style/bus.png" alt="example graphic"  style="width:200px;height:200px;"/></span></a>
        
+  
+	  </div>
+    </div>
+    <div id="footer">
+      <!-- daca subsol -->
+    </div>
+  </div>
+</body>
+</html>
 
 	 
-</html>
