--- a/informatii.html
+++ b/informatii.html
@@ -12,7 +12,27 @@
 <p>UI version: 2019.20.1.1</p>
 
 
+<script>
+var w;
 
+function startWorker() {
+  if(typeof(Worker) !== "undefined") {
+    if(typeof(w) == "undefined") {
+      w = new Worker("demo_workers.js");
+    }
+    w.onmessage = function(event) {
+      document.getElementById("result").innerHTML = event.data;
+    };
+  } else {
+    document.getElementById("result").innerHTML = "Browserul tau nu suporta Web Workers...";
+  }
+}
+
+function stopWorker() { 
+  w.terminate();
+  w = undefined;
+}
+</script>
 
 
 
