--- a/informatii.html
+++ b/informatii.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<p>UI version: 2019.20.1.1</p>
+<p>UI version: 2019.20.1.2</p>
 
 
 <script>
@@ -34,6 +34,26 @@ function stopWorker() {
 }
 </script>
 
+ <div id="main">
+    <div id="header">
+      <div id="logo">
+        <div id="logo_text">
+          <!-- clasa logo_colour o folosim pentru a schimba culoarea textului -->
+		  <h1><a href="index.html">STP<span class="logo_colour"></span></a></h1>
+          <h2>Societatea de Transport Public Alba Iulia</h2>
+        </div>
+      </div>
+	  
+      <div id="menubar">
+        <ul id="menu">
+       <!-- clasa select o folosim pentru pagina curenta -->
+          <li><a href="index.html">Pagina Principala</a></li>
+          <li class="selected"><a href="informatii.html">Informatii</a></li>
+          <li><a href="contact.html">Contact </a></li>
+		  <li><a href="transport.html">Harta Stp</a></li>
+        </ul>
+      </div>
+    </div>
 
 
 
