--- a/informatii.html
+++ b/informatii.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<p>UI version: 2019.20.1.2</p>
+<p>UI version: 2019.20.1.3</p>
 
 
 <script>
@@ -54,7 +54,28 @@ function stopWorker() {
         </ul>
       </div>
     </div>
-
+	
+<div id="site_content">
+      <div class="sidebar">
+        <!-- partea dreapta -->
+        <h3>Noutati:</h3>
+        <h4>Am dat drumu la pagina</h4>
+        <h5>20 Ianuarie 2019</h5>
+        <p></p>
+        <h4>Contact FaceBook</h4>  
+        <a href="https://www.facebook.com/steau.mihai20?ref=bookmarks" target="_blank">Steau Mihai</a>
+        <h4>Contact Instagram</h4>  
+        <a href="https://www.instagram.com/steaumihai20/" target="_blank">steaumihai20</a>
+        <h3>Cautare avansata:</h3>
+        <form method="post" action="#" id="search_form">
+          <p>
+            <input class="search" type="text" name="search_field" value="....." />
+            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="style/search.png" alt="Search" title="Search" />
+          </p>
+        </form>
+      </div>
+	  
+	  
 
 
 
