--- a/informatii.html
+++ b/informatii.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<p>UI version: 2019.20.1.3</p>
+<p>UI version: 2019.20.1.4</p>
 
 
 <script>
@@ -74,7 +74,11 @@ function stopWorker() {
           </p>
         </form>
       </div>
-	  
+	  <p><p>Cronometru: <output id="result"></output></p>
+<button onclick="startWorker()">Start citire</button>
+<button onclick="stopWorker()">Stop citire</button>
+      <div id="content">
+        <!-- worker pentru web -->
 	  
 
 
