--- a/informatii.html
+++ b/informatii.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<p>UI version: 2019.20.1.4</p>
+<p>UI version: 2019.20.1.5</p>
 
 
 <script>
@@ -74,12 +74,22 @@ function stopWorker() {
           </p>
         </form>
       </div>
+	  <!-- worker pentru web -->
 	  <p><p>Cronometru: <output id="result"></output></p>
 <button onclick="startWorker()">Start citire</button>
 <button onclick="stopWorker()">Stop citire</button>
       <div id="content">
-        <!-- worker pentru web -->
-	  
+      <!-- mesaj lung -->
+	   <h1> <p>Cum afli programul autobuzelor?<p></h1>
+<p>Internet – utilizează route-plannerul de pe siteul nostru pentru planificarea călătoriilor.</p>
+<p>Mobil – descoperă versiunea mobilă a siteului nostru și te vom ajuta să îți planifici călătoria în cele 7 zone metropolitane.</p>
+<p>Informații legate de programul autobuzelor în zona 1: +40 258 812 826</p>
+<p>Informații legate de programul autobuzelor în zonele 2 – 7: +40 258 812 967</p>
+<p>În stația de autobuz – citește panourile din stații și află orarul autobuzelor și rutele pe care circulă.</p>
+<p>Nu uitați: în autobuze și în stații vă puteți orienta cu ajutorul anunțurilor vocale.</p>
+
+<hr>
+
 
 
 
