--- a/informatii.html
+++ b/informatii.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<p>UI version: 2019.20.1.5</p>
+<p>UI version: 2019.20.1.6</p>
 
 
 <script>
@@ -89,7 +89,34 @@ function stopWorker() {
 <p>Nu uitați: în autobuze și în stații vă puteți orienta cu ajutorul anunțurilor vocale.</p>
 
 <hr>
-
+<!-- informatii utile -->
+<br><h2><p>Sfaturi pentru călători</p></h2>
+<p>Pentru a putea oferi cele mai bune servicii de transport public, avem nevoie de ajutorul
+ dumneavoastră. Vă prezentăm câteva sugestii cu privire modul în care călătoria poate deveni
+ mai placută atât pentru dumneavoastră cât și pentru cei din jur:<p>
+<p>-asiguraţi-vă că vă aflaţi în staţia corectă urmărind harta şi programul de circulaţie;<p>
+<p>-consultaţi panoul electronic de informare;</p> 
+<p>-nu aşteptaţi autobuzul pe carosabil; </p>
+<p>-conducătorul autobuzului are obligaţia de a opri în staţie cât mai aproape de bordură, pentru a vă facilita accesul;</p>
+<p>-aşteptaţi oprirea autobuzului; </p>
+<p>-acordaţi prioritate călătorilor ce coboară;</p>
+<p>-urcarea în autobuz se face numai pe uşa din faţă, din dreptul conducătorului autobuzului;</p>
+<p>-respectați ordinea de sosire în staţie la urcarea în autobuz, acordând întâietate persoanelor 
+în vârstă, femeilor însărcinate sau cu copii în braţe, daţi dovadă de civilizaţie şi respect 
+faţă de ceilalţi călători;</p>
+<p>-persoanele cu dizabilitati pot solicita sprijinul conducătorului auto pentru a le facilita
+ accesul sau coborârea din mijlocul de transpor;</p>
+<p>-biletul poate fi cumpărat de la chioşcurile sau automatele de vânzare bilete din staţiile
+ de autobuz;</p>
+<p>-procurarea biletului de călătorie este absolut necesară dacă nu posedaţi altă legitimaţie
+ de călătorie valabilă. Atunci când cumpăraţi un bilet în autobuz, este bine să plătiţi
+ cu o sumă potrivită de bani. Şoferul poate refuza să accepte bancnote de valoare mai mare 
+ de 50 RON în cazul în care nu poate oferi rest;</p>
+<p>-biletul devine valabil numai după ce a fost validat. Validarea biletului este obligatorie
+ şi se face introducând biletul în aparatul de validare montat în salonul autobuzului.
+ Biletul, odată validat, trebuie păstrat pe toată perioada călătoriei;</p>
+<p>-abonamentele de călătorie pot fi achiziţionate de la punctele de servicii situate în 
+vecinătatea staţiilor de autobuz;</p>
 
 
 
