--- a/informatii.html
+++ b/informatii.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<p>UI version: 2019.20.1.6</p>
+<p>UI version: 2019.20.1.7</p>
 
 
 <script>
@@ -117,7 +117,24 @@ faţă de ceilalţi călători;</p>
  Biletul, odată validat, trebuie păstrat pe toată perioada călătoriei;</p>
 <p>-abonamentele de călătorie pot fi achiziţionate de la punctele de servicii situate în 
 vecinătatea staţiilor de autobuz;</p>
-
+<p>-urmăriţi afişajul electronic amplasat în autobuz. Acesta vă indică linia pe care circulaţi şi staţia care urmează;</p>
+<p>-solicitaţi oprirea autobuzului prin apăsarea butonului „STOP” din vecinătatea uşii;</p>
+<p>-nu există nici o taxă pentru o persoană care călătoreşte cu un copil într-un cărucior. 
+Căruciorul pentru copii trebuie încărcat prin uşile de la mijlocul autobuzului. </p>
+<p>Aşteptaţi autobuzele cu podea coborâtă (LF) în care accesul este mai uşor. Nu lăsaţi copilul singur sau fără supraveghere; </p>
+<p>-copiii sub 5 ani au permisiunea de a călători gratuit în compania unei persoane majore
+ care a plătit o călătorie sau însoţit de o persoană cu un copil în cărucior.</p>
+<p>-câinii de poliţie şi câinii ghid pot să călătorească în autobuze. Şoferul decide dacă 
+puteţi călători în autobuz cu un animal de companie.</p>
+<p>-scaunele cu rotile sunt permise în autobuze. Din motive de siguranţă sunt interzise în 
+autobuze scaunele electrice cu rotile;</p>
+<p>-printr-un comportament civilizat faţă de conducătorul auto, îi impuneţi acestuia un 
+tratament similar;</p>
+<p>-păstrarea ordinii şi curăţeniei, în autobuz şi în jurul acestuia, este dovadă de
+ respect faţă de cei din jurul tău; 
+ înainte de a murdări sau deteriora scaunele, 
+ alte dotări din salonul autobuzului gândiţi-vă dacă v-ar face plăcere ca data următoare să călătoriţi aşezaţi pe nişte scaune murdare, deteriorate;</p>
+     <hr> <!-- creare spatiere -->
 
 
 
