--- a/informatii.html
+++ b/informatii.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<p>UI version: 2019.20.1.7</p>
+<p>UI version: 2019.20.1.8</p>
 
 
 <script>
@@ -135,7 +135,19 @@ tratament similar;</p>
  înainte de a murdări sau deteriora scaunele, 
  alte dotări din salonul autobuzului gândiţi-vă dacă v-ar face plăcere ca data următoare să călătoriţi aşezaţi pe nişte scaune murdare, deteriorate;</p>
      <hr> <!-- creare spatiere -->
+	 
+<h4><b><p>Citirea corecta a panourilor din statii</b></p></h4>
+<span class="center"><img src="style/citire.jpg" alt="example graphic" style="width:550px;height:250px;" /></span>
+	
+	<hr>
+	
+<h4><b><p>Regulament pentru functionarea transportului public local</b></p></h4>
+<span class="right"><img src="style/informatii.png" alt="example graphic" style="width:550px;height:330px;" /></span>
 
-
-
+	</div>
+    </div>
+    <div id="footer">   
+  </div>
+</body>
 </html>
+
