--- a/transport.html
+++ b/transport.html
@@ -6,10 +6,34 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-	
+	 #map {
+        height: 100%;
+      }
+  
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #floating-panel {
+        position: absolute;
+        top: 10px;
+        left: 25%;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+        text-align: center;
+        font-family: 'Roboto','sans-serif';
+        line-height: 30px;
+        padding-left: 10px;
+      }
+      #floating-panel {
+        margin-left: -100px;
+      }
 	</style>
 	
-<p>UI version: 2019.20.1.1</p>
+<p>UI version: 2019.20.1.2</p>
 	
 	
 	
