--- a/transport.html
+++ b/transport.html
@@ -32,9 +32,19 @@
         margin-left: -100px;
       }
 	</style>
+	</head>
+  <body>
+<p>UI version: 2019.20.1.3</p>
+	    <div id="floating-panel">
 	
-<p>UI version: 2019.20.1.2</p>
-	
+      <input type="button" value="Buton intoarcere" onclick="goBack();"></input>
+    </div>
+    <div id="map"></div>
+	<script>
+	function goBack(){
+	window.history.back();
+	}
+	</script>
 	
 	
 	
