--- a/transport.html
+++ b/transport.html
@@ -34,18 +34,33 @@
 	</style>
 	</head>
   <body>
-<p>UI version: 2019.20.1.3</p>
-	    <div id="floating-panel">
-	
+<p>UI version: 2019.20.1.4</p>
+
+	  <div id="floating-panel">
       <input type="button" value="Buton intoarcere" onclick="goBack();"></input>
-    </div>
+      </div>
     <div id="map"></div>
 	<script>
-	function goBack(){
-	window.history.back();
+	function goBack()
+	{
+		window.history.back();
 	}
 	</script>
+	 <script>
 	
+      var panorama;
+// poti sterge divul ca sa nu mai apara toggle street
+      function initMap() {
+        var astorPlace = {lat: 46.0717136, lng: 23.5605768}, infoWindow;
+
+        // creare map
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: astorPlace,
+          zoom: 14,
+          streetViewControl: false
+        });
+infoWindow = new google.maps.InfoWindow;
+        // punere marker pe mapa
 	
 	
 	
