--- a/transport.html
+++ b/transport.html
@@ -90,6 +90,34 @@ infoWindow = new google.maps.InfoWindow;
             icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
             title: 'Bus Stop'
 		});	
-	
+		
+	//statie P.ta Alessandria R(Centru)
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0696331, lng: 23.5784299},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
+			//HCC
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0675917, lng: 23.5610678},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
+			//Cimitirul Eroilor
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0598196, lng: 23.5702885},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
+			//Gara
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0598196, lng: 23.5702885},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
 	
 	</html>
