--- a/transport.html
+++ b/transport.html
@@ -83,7 +83,7 @@ infoWindow = new google.maps.InfoWindow;
             icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
             title: 'Bus Stop'
 		});	
-		//statie Telekom-Alessandria T
+		    //statie Telekom-Alessandria T
 			var busMarker = new google.maps.Marker({
             position: {lat: 46.0696331, lng: 23.5784299},
             map: map,
@@ -91,7 +91,7 @@ infoWindow = new google.maps.InfoWindow;
             title: 'Bus Stop'
 		});	
 		
-	//statie P.ta Alessandria R(Centru)
+	        //statie P.ta Alessandria R(Centru)
 			var busMarker = new google.maps.Marker({
             position: {lat: 46.0696331, lng: 23.5784299},
             map: map,
@@ -119,5 +119,25 @@ infoWindow = new google.maps.InfoWindow;
             icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
             title: 'Bus Stop'
 		});	
-	
+	//Unirea- Ampoi1/3
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0734078, lng: 23.5794922},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
+			//Unirea-Motilor/Gara
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0734078, lng: 23.5794922},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
+			//Ampoi 3 BT
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0831994, lng: 23.5816322},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
 	</html>
