--- a/transport.html
+++ b/transport.html
@@ -119,7 +119,7 @@ infoWindow = new google.maps.InfoWindow;
             icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
             title: 'Bus Stop'
 		});	
-	//Unirea- Ampoi1/3
+        	//Unirea- Ampoi1/3
 			var busMarker = new google.maps.Marker({
             position: {lat: 46.0734078, lng: 23.5794922},
             map: map,
@@ -136,6 +136,27 @@ infoWindow = new google.maps.InfoWindow;
 			//Ampoi 3 BT
 			var busMarker = new google.maps.Marker({
             position: {lat: 46.0831994, lng: 23.5816322},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
+		//Bazin Olimipic/Stadion
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0804768, lng: 23.5648593},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
+			//Stadion, jos
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0804768, lng: 23.5648593},
+            map: map,
+            icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
+            title: 'Bus Stop'
+		});	
+			//Piata- l04-stadion
+			var busMarker = new google.maps.Marker({
+            position: {lat: 46.0763878, lng: 23.5596972},
             map: map,
             icon: 'https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=bus|FFFF00',
             title: 'Bus Stop'
