--- a/transport.html
+++ b/transport.html
@@ -34,7 +34,7 @@
 	</style>
 	</head>
   <body>
-<p>UI version: 2019.20.1.8</p>
+<p>UI version: 2019.20.1.9</p>
 
 	  <div id="floating-panel">
       <input type="button" value="Buton intoarcere" onclick="goBack();"></input>
@@ -49,9 +49,9 @@
 	 <script>
 	
       var panorama;
-// poti sterge divul ca sa nu mai apara toggle street
+	  // poti sterge divul ca sa nu mai apara toggle street
       function initMap() {
-        var astorPlace = {lat: 46.0717136, lng: 23.5605768}, infoWindow;
+      var astorPlace = {lat: 46.0717136, lng: 23.5605768}, infoWindow;
 
         // creare map
         var map = new google.maps.Map(document.getElementById('map'), {
@@ -59,7 +59,9 @@
           zoom: 14,
           streetViewControl: false
         });
-infoWindow = new google.maps.InfoWindow;
+		
+		
+		infoWindow = new google.maps.InfoWindow;
         // punere marker pe mapa
 	
 	        var busMarker = new google.maps.Marker({
@@ -194,7 +196,13 @@ infoWindow = new google.maps.InfoWindow;
           handleLocationError(false, infoWindow, map.getCenter());
         }
       }
-		
+		function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+        infoWindow.open(map);
+      }
 		
 		
 	</html>
