--- a/informatii.html
+++ b/informatii.html
@@ -65,7 +65,7 @@ function stopWorker() {
         <h4>Contact FaceBook</h4>  
         <a href="https://www.facebook.com/steau.mihai20?ref=bookmarks" target="_blank">Steau Mihai</a>
         <h4>Contact Instagram</h4>  
-        <a href="https://www.instagram.com/steaumihai20/" target="_blank">steaumihai20</a>
+        <a href="instagram://user?username={steaumihai20}">Steau Mihai</a>
         <h3>Cautare avansata:</h3>
         <form method="post" action="#" id="search_form">
           <p>
