--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,28 @@
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
 </head>
 
+<body>
+  <div id="main">
+    <div id="header">
+      <div id="logo">
+        <div id="logo_text">
+        
+          <h1><a href="index.html">STP<span class="logo_colour"></span></a></h1>
+          <h2>Societatea de Transport Public Alba Iulia</h2>
+        </div>
+      </div>
+      <div id="menubar">
+        <ul id="menu">
+         
+          <li><a href="index.html">Pagina Principala</a></li>
+          <li><a href="informatii.html">Informatii</a></li>
+          <li class="selected"><a href="contact.html">Contact </a></li>
+		  <li><a href="transport.html">Harta Stp</a></li>
+        </ul>
+      </div>
+    </div>
 
-<p>UI version: 2019.20.1.1</p>
+<p>UI version: 2019.20.1.2</p>
 
 
 </html>
