--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,26 @@
         </ul>
       </div>
     </div>
-
-<p>UI version: 2019.20.1.2</p>
+ <div id="site_content">
+      <div class="sidebar">
+        <!-- insert your sidebar items here -->
+        <h3>Noutati:</h3>
+        <h4>Am dat drumu la pagina</h4>
+        <h5>20 Ianuarie 2019</h5>
+        <p></p>
+        <h4>Contact FaceBook</h4>  
+          <a href="https://www.facebook.com/steau.mihai20?ref=bookmarks" target="_blank">Steau Mihai</a>
+       <h4>Contact Instagram</h4>  
+          <a href="instagram://user?username={steaumihai20}">Steau Mihai</a>
+	   
+        <h3>Cautare avansata:</h3>
+        <form method="post" action="#" id="search_form">
+          <p>
+            <input class="search" type="text" name="search_field" value="....." />
+            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="style/search.png" alt="Search" title="Search" />
+          </p>
+        </form>
+<p>UI version: 2019.20.1.3</p>
 
 
 </html>
