--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     </div>
  <div id="site_content">
       <div class="sidebar">
-        <!-- insert your sidebar items here -->
+        <!--partea dreapta -->
         <h3>Noutati:</h3>
         <h4>Am dat drumu la pagina</h4>
         <h5>20 Ianuarie 2019</h5>
@@ -48,7 +48,7 @@
             <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="style/search.png" alt="Search" title="Search" />
           </p>
         </form>
-<p>UI version: 2019.20.1.5</p>
+<p>UI version: 2019.20.1.6</p>
 </div>
       <div id="content">
        
@@ -81,4 +81,12 @@
             <p><span>Mesaj:</span><textarea class="contact textarea" rows="8" cols="50" name="your_enquiry"></textarea></p>
             <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="Trimite" /></p>
           </div>
+</form>
+       
+      </div>
+    </div>
+    <div id="footer">
+    </div>
+  </div>
+</body>
 </html>
