--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-<p>UI version: 2019.20.1.7</p>
+<!-- <p>UI version: 2019.20.1.7</p> -->
   <div id="main">
     <div id="header">
       <div id="logo">
