--- a/transport.html
+++ b/transport.html
@@ -34,7 +34,7 @@
 	</style>
 	</head>
   <body>
-<p>UI version: 2019.20.1.10</p>
+ <!-- <p>UI version: 2019.20.1.10</p> -->
 
 	  <div id="floating-panel">
       <input type="button" value="Buton intoarcere" onclick="goBack();"></input>
